talos/nginx-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx-gateway
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
