talos/talos-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: talos-gateway
  annotations:
    cert-manager.io/issuer: foo
spec:
  gatewayClassName: foo
  listeners:
    - name: http
      hostname: example.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-com-tls


# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: gateway
# spec:
#   gatewayClassName: nginx
#   listeners:
#   - name: http
#     port: 80
#     protocol: HTTP
    
#     allowedRoutes:
#         namespaces:
#           from: All
